--- a/app/src/main/res/layout/leave_request_summary_form_layout.xml
+++ b/app/src/main/res/layout/leave_request_summary_form_layout.xml
@@ -28,9 +28,9 @@
                 android:id="@+id/leave_request_summary_form_leave_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textColor="@color/colorPrimary"
                 android:ellipsize="end"
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
                 android:lines="1"
                 android:padding="17dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -64,7 +64,6 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:lines="1"
-                        android:visibility="gone"
                         android:paddingLeft="5dp"
                         android:textColor="@color/colorRed"
                         android:paddingBottom="22dp"
@@ -80,6 +79,86 @@
 
             </LinearLayout>
 
+            <LinearLayout android:id="@+id/leave_request_form_days_requested_grp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+                <android.support.v7.widget.AppCompatImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_done_black" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/leave_request_summary_form_days_requested"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:paddingLeft="5dp"
+                        android:textStyle="bold"
+                        android:lines="1"
+                        android:paddingBottom="22dp"
+                        android:paddingTop="22dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.8dp"
+                        android:layout_below="@id/leave_request_summary_form_days_requested"
+                        android:background="@color/colorLightGrey" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout android:id="@+id/leave_request_form_days_requested_startDateGrp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+                <android.support.v7.widget.AppCompatImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_done_black" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/leave_request_summary_form_days_requested_startDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:paddingLeft="5dp"
+                        android:textStyle="bold"
+                        android:lines="1"
+                        android:paddingBottom="22dp"
+                        android:paddingTop="22dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.8dp"
+                        android:layout_below="@id/leave_request_summary_form_days_requested_startDate"
+                        android:background="@color/colorLightGrey" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+
+
             <LinearLayout android:id="@+id/leave_request_summary_form_days_allowed_grp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorWhite"
                     android:padding="15dp"
-                    android:src="@drawable/ic_plane_black"
+                    android:src="@drawable/ic_done_black"
                     />
 
 
@@ -106,6 +185,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:lines="1"
+                        android:textStyle="bold"
                         android:paddingLeft="5dp"
                         android:paddingBottom="22dp"
                         android:paddingTop="22dp"
@@ -132,7 +212,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorWhite"
                     android:padding="15dp"
-                    android:src="@drawable/ic_plane_black" />
+                    android:src="@drawable/ic_done_black" />
 
 
                 <RelativeLayout
@@ -145,6 +225,8 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:lines="1"
+                        android:textStyle="bold"
+                        android:paddingLeft="5dp"
                         android:paddingBottom="22dp"
                         android:paddingTop="22dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
@@ -158,7 +240,11 @@
 
             </LinearLayout>
 
-            <LinearLayout android:id="@+id/leave_request_form_days_requested_grp"
+
+
+
+
+            <LinearLayout android:id="@+id/leave_request_summary_form_days_address_grp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -170,7 +256,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorWhite"
                     android:padding="15dp"
-                    android:src="@drawable/ic_plane_black" />
+                    android:src="@drawable/ic_home_black" />
 
 
                 <RelativeLayout
@@ -178,10 +264,12 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/leave_request_summary_form_days_requested"
+                        android:id="@+id/leave_request_summary_form_address_on_leave"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
+                        android:paddingLeft="5dp"
+                        android:hint="Enter address on leave"
                         android:lines="1"
                         android:paddingBottom="22dp"
                         android:paddingTop="22dp"
@@ -190,16 +278,16 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.8dp"
-                        android:layout_below="@id/leave_request_summary_form_days_requested"
+                        android:layout_below="@id/leave_request_summary_form_address_on_leave"
                         android:background="@color/colorLightGrey" />
                 </RelativeLayout>
 
             </LinearLayout>
-
-            <LinearLayout android:id="@+id/leave_request_form_days_requested_startDateGrp"
+            <LinearLayout android:id="@+id/leave_request_summary_form_days_country_grp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 >
 
                 <android.support.v7.widget.AppCompatImageButton
@@ -207,7 +295,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorWhite"
                     android:padding="15dp"
-                    android:src="@drawable/ic_menu_date" />
+                    android:src="@drawable/ic_earth" />
 
 
                 <RelativeLayout
@@ -215,10 +303,12 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/leave_request_summary_form_days_requested_startDate"
+                        android:id="@+id/leave_request_summary_form_country"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
+                        android:paddingLeft="5dp"
+                        android:hint="Add country"
                         android:lines="1"
                         android:paddingBottom="22dp"
                         android:paddingTop="22dp"
@@ -227,49 +317,11 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.8dp"
-                        android:layout_below="@id/leave_request_summary_form_days_requested_startDate"
+                        android:layout_below="@id/leave_request_summary_form_country"
                         android:background="@color/colorLightGrey" />
                 </RelativeLayout>
 
             </LinearLayout>
-
-            <LinearLayout android:id="@+id/leave_request_form_days_requested_endDateGrp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-
-                <android.support.v7.widget.AppCompatImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_menu_date" />
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/leave_request_summary_form_days_requested_endDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:lines="1"
-                        android:paddingBottom="22dp"
-                        android:paddingTop="22dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.8dp"
-                        android:layout_below="@id/leave_request_summary_form_days_requested_endDate"
-                        android:background="@color/colorLightGrey" />
-                </RelativeLayout>
-
-            </LinearLayout>
-
             <LinearLayout android:id="@+id/leave_request_summary_form_days_phone_grp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -295,9 +347,10 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:lines="1"
+                        android:paddingLeft="5dp"
                         android:hint="Enter phone on leave"
                         android:background="@android:color/transparent"
-                        android:maxLength="15"
+                        android:maxLength="16"
                         android:inputType="phone"
                         android:paddingBottom="22dp"
                         android:paddingTop="22dp"
@@ -311,96 +364,7 @@
                 </RelativeLayout>
 
             </LinearLayout>
-
-
-
-            <LinearLayout android:id="@+id/leave_request_summary_form_days_address_grp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone"
-                >
-
-                <android.support.v7.widget.AppCompatImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_bed_black" />
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/leave_request_summary_form_address_on_leave"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:text="10 days requested"
-                        android:lines="1"
-                        android:paddingBottom="22dp"
-                        android:paddingTop="22dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.8dp"
-                        android:layout_below="@id/leave_request_summary_form_address_on_leave"
-                        android:background="@color/colorLightGrey" />
-                </RelativeLayout>
-
-            </LinearLayout>
-            <LinearLayout android:id="@+id/leave_request_form_days_country_grp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone"
-                >
-
-                <android.support.v7.widget.AppCompatImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_earth" />
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/leave_request_summary_form_country"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:text="Add country"
-                        android:lines="1"
-                        android:paddingBottom="22dp"
-                        android:paddingTop="22dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.8dp"
-                        android:layout_below="@id/leave_request_summary_form_country"
-                        android:background="@color/colorLightGrey" />
-                </RelativeLayout>
-
-            </LinearLayout>
             <!-- </GridLayout>-->
-
-            <TextView
-                android:id="@+id/leave_request_summary_form_submit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="18dp"
-                android:text="SUBMIT LEAVE"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat"
-                android:textColor="@color/colorLGreen" />
         </LinearLayout>
     </ScrollView>
 
