--- a/app/src/main/res/menu/leave_summary_menu.xml
+++ b/app/src/main/res/menu/leave_summary_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app ="http://schemas.android.com/apk/res-auto" >
-    <item android:id ="@+id/menu_item_save"
-        app:showAsAction ="always" android:title="SAVE  "/>
+    <item android:id ="@+id/leave_summary_menu_submit"
+        app:showAsAction ="always" android:title="SUBMIT  "/>
 </menu>
