--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#EF5350</color>
     <color name="colorLGreen">#33FF39</color>
+    <color name="colorDGreen">#4DBD33</color>
 </resources>
