--- a/app/src/main/res/layout/project_new_dialog_layout.xml
+++ b/app/src/main/res/layout/project_new_dialog_layout.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+
 
         <EditText
             android:id="@+id/project_new_layout_projectName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:hint="Project Name"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="center"
+            android:gravity="left"
             android:textSize="18sp" />
 
 
-    </RelativeLayout>
+
 
     <Button
         android:id="@+id/project_new_layout_inputBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:text="CREATE"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/project_new_layout_projectName"
         android:textSize="13sp"
         android:textStyle="bold" />
 
