--- a/app/src/main/res/layout/tasks_list_layout.xml
+++ b/app/src/main/res/layout/tasks_list_layout.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tasks_list_layout_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-   <!-- xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">-->
-
-    <!-- <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:fab="http://schemas.android.com/apk/res-auto"
-        xmlns:app="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">-->
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -129,14 +114,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 fab:menu_fab_size="normal"
-                android:layout_gravity="right|bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
                 fab:fab_colorNormal="#0F97D6"
-                android:layout_marginRight="15dp"
-                android:layout_marginBottom="15dp"
-                app:menu_colorNormal="@color/colorPrimary"
-                app:menu_labels_colorNormal="@color/colorPrimary"
-                app:menu_colorPressed="@color/colorPrimary"
-                app:menu_colorRipple="@color/colorClearGrey"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                fab:menu_colorNormal="@color/colorPrimary"
+                fab:menu_labels_colorNormal="@color/colorPrimary"
+                fab:menu_colorPressed="@color/colorPrimary"
+                fab:menu_colorRipple="@color/colorClearGrey"
                 fab:menu_labels_ellipsize="end"
                 fab:menu_labels_singleLine="true"
                 fab:menu_backgroundColor="#ccffffff"
@@ -149,11 +136,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="18dp"
-                    app:fab_colorNormal="@color/colorPrimary"
-                    app:fab_colorPressed="@color/colorPrimary"
-                    app:fab_colorRipple="#99FFFFFF"
+                    fab:fab_colorNormal="@color/colorPrimary"
+                    fab:fab_colorPressed="@color/colorPrimary"
+                    fab:fab_colorRipple="#99FFFFFF"
                     android:src="@drawable/ic_send_black_24dp"
-                    app:backgroundTint="@color/colorPrimary"
+                    fab:backgroundTint="@color/colorPrimary"
                     fab:fab_label="Request Leave"/>
 
                 <com.github.clans.fab.FloatingActionButton
@@ -161,11 +148,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="18dp"
-                    app:fab_colorNormal="@color/colorPrimary"
-                    app:fab_colorPressed="@color/colorPrimary"
-                    app:fab_colorRipple="#99FFFFFF"
+                    fab:fab_colorNormal="@color/colorPrimary"
+                    fab:fab_colorPressed="@color/colorPrimary"
+                    fab:fab_colorRipple="#99FFFFFF"
                     android:src="@drawable/ic_content_paste_black_24dp"
-                    app:backgroundTint="@color/colorPrimary"
+                    fab:backgroundTint="@color/colorPrimary"
                     fab:fab_label="Add Project"/>
 
                 <com.github.clans.fab.FloatingActionButton
@@ -173,11 +160,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="18dp"
-                    app:fab_colorNormal="@color/colorPrimary"
-                    app:fab_colorPressed="@color/colorPrimary"
-                    app:fab_colorRipple="#99FFFFFF"
+                    fab:fab_colorNormal="@color/colorPrimary"
+                    fab:fab_colorPressed="@color/colorPrimary"
+                    fab:fab_colorRipple="#99FFFFFF"
                     android:src="@drawable/ic_assignment_black_24dp"
-                    app:backgroundTint="@color/colorPrimary"
+                    fab:backgroundTint="@color/colorPrimary"
                     fab:fab_label="Add Task"/>
 
             </com.github.clans.fab.FloatingActionMenu>
