Fixed floating action menu animation Fixed tasks list init bug Fixed removal of My Tasks on creation of new project Added delete to option menu Added loading message to submit leave form

--- a/app/src/main/res/layout/leave_request_summary_form_layout.xml
+++ b/app/src/main/res/layout/leave_request_summary_form_layout.xml
@@ -19,10 +19,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+
+
+        <LinearLayout android:id="@+id/leave_request_summary_form_grp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <ProgressBar android:id="@+id/leave_request_summary_form_progress_bar"
+                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal"/>
 
             <TextView
                 android:id="@+id/leave_request_summary_form_leave_type"
