Changed mipmap icon to transparent, hid due date for form tasks

--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -20,7 +20,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:gravity="left">
 
         <com.codefish.android.taskmanager.component.smartDateView.SmartDateTextView
             android:id="@+id/task_item_layout_task_due_date"
